2015-04-15  Michael R. Crusoe  <mcrusoe@msu.edu>

   * lib/hashtable.cc: remove memory leak

2015-04-15  Susan Steinman  <steinman.tutoring@gmail.com>

   * khmer/scripts/normalize-by-median.py: pass individual arg values to 
      functions instead of ArgParse object

2015-04-15  Thomas Fenzl  <thomas.fenzl@gmx.net>

   * scripts/{count-overlap.py,readstats.py},tests/test_scripts.py: 
   added a --csv option to readstats
   updated documentation for count-overlap
   * khmer/_khmermodule.cc: fixed missing error handling 
   for hashbits_count_overlap

2015-04-15  en zyme  <en_zyme@outlook.com>

   * khmer/khmer/kfile.py: check_file_status() -> check_input_files()
   * khmer/sandbox/{collect-reads, khmer/sandbox/sweep-reads}.py 
     khmer/scripts/{abundance-dist-single, abundance-dist, annotate-partitions,
     count-median, count-overlap, do-partition, extract-paired-reads, 
     extract-partitions, filter-abund-single, filter-abund, filter-stoptags,
     find-knots, interleave-reads, load-graph, load-into-counting, 
     make-initial-stoptags, merge-partitions, partition-graph,
     sample-reads-randomly, split-paired-reads}.py:
       check_file_status() -> check_input_files()
   * khmer/tests/test_functions.py: check_file_status() -> check_input_files()

2015-04-15  Andreas Härpfer  <ahaerpfer@gmail.com>

   * khmer/utils.py: fix record checks to account for comments in old style
   FASTQ data.
   * tests/test-data/old-style-format-w-comments.fq: new test data.
   * tests/test_scripts.py: add test against new test data.

2015-04-15  Michael R. Crusoe  <mcrusoe@msu.edu>

   * doc/dev/release.txt: update release instructions to more thoroughly run
   tests.

2015-04-14  Susan Steinman  <steinman.tutoring@gmail.com>

   * khmer/scripts/normalize-by-median.py: allow for paired and unpaired
      files to be normalized together. separate function for error check
   * khmer/tests/test_scripts.py: created test for paired/unpaired data
