@@ -1,6 +1,7 @@
 2015-04-15  Michael R. Crusoe  <mcrusoe@msu.edu>
 
    * lib/hashtable.cc: remove memory leak
+   * scripts/readstats.py,tests/test_scripts.py: fix PEP8 violations
 
 2015-04-15  Susan Steinman  <steinman.tutoring@gmail.com>
 
